Adding our work.

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,8 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -57,12 +59,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = None\n",
-    "y = None"
+    "X = boston_features.loc[:,[\"B\", \"DIS\"]]\n",
+    "y = boston_features[\"LSTAT\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>DIS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.542096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.623954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.989737</td>\n",
+       "      <td>0.623954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.994276</td>\n",
+       "      <td>0.707895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.707895</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          B       DIS\n",
+       "0  1.000000  0.542096\n",
+       "1  1.000000  0.623954\n",
+       "2  0.989737  0.623954\n",
+       "3  0.994276  0.707895\n",
+       "4  1.000000  0.707895"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   -1.275260\n",
+       "1   -0.263711\n",
+       "2   -1.627858\n",
+       "3   -2.153192\n",
+       "4   -1.162114\n",
+       "Name: LSTAT, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
    ]
   },
   {
@@ -76,8 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -85,17 +192,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>DIS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>0.988729</td>\n",
+       "      <td>0.852042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>0.949997</td>\n",
+       "      <td>0.644222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.787167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>0.928993</td>\n",
+       "      <td>0.398453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>0.991301</td>\n",
+       "      <td>0.615013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            B       DIS\n",
+       "347  0.988729  0.852042\n",
+       "282  0.949997  0.644222\n",
+       "288  1.000000  0.787167\n",
+       "468  0.928993  0.398453\n",
+       "277  0.991301  0.615013"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "reg = LinearRegression().fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +307,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictions = reg.predict(X_test)\n",
+    "\n",
+    "residuals = predictions - y_test\n",
+    "\n",
+    "mse = (residuals**2).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5226882874809512"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,14 +364,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def kfolds(data, k):\n",
     "    # Force data as pandas dataframe\n",
-    "    # add 1 to fold size to account for leftovers           \n",
-    "    return None"
+    "    shuffled_data = pd.DataFrame(data)\n",
+    "    # add 1 to fold size to account for leftovers\n",
+    "    folds = []\n",
+    "    shuffled_data = shuffled_data.sample(frac=1).reset_index(drop=True)\n",
+    "    size_of_fold_data = len(data) // k\n",
+    "    num_remaining_data_points = len(data) % k\n",
+    "    for k_index in range(k):\n",
+    "        if k_index < num_remaining_data_points:\n",
+    "            current_index = k_index*size_of_fold_data+k_index\n",
+    "            fold_data = shuffled_data.iloc[current_index:current_index+size_of_fold_data+1,:]\n",
+    "        else:\n",
+    "            current_index = k_index*size_of_fold_data+num_remaining_data_points\n",
+    "            fold_data = shuffled_data.iloc[current_index:current_index+size_of_fold_data,:]\n",
+    "        folds.append(fold_data)\n",
+    "    return folds"
    ]
   },
   {
@@ -170,8 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "folds = kfolds(boston_features, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Make sure to concatenate the data again"
@@ -180,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -200,9 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5200915541131916, 0.43369998499497225, 0.6687664580101057, 0.77460080319797, 0.9033703603245291]\n",
+      "[0.890905042069521, 0.8099135755523893, 0.48365229070786786, 1.1538209009935703, 0.41364198460949925]\n"
+     ]
+    }
+   ],
    "source": [
     "test_errs = []\n",
     "train_errs = []\n",
@@ -210,14 +460,67 @@
     "\n",
     "for n in range(k):\n",
     "    # Split in train and test for the fold\n",
-    "    train = None\n",
-    "    test = None\n",
+    "    fold_data = folds[n]\n",
+    "    X = fold_data.loc[:,[\"B\", \"DIS\"]]\n",
+    "    y = fold_data[\"LSTAT\"]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "    # Fit a linear regression model\n",
+    "    reg = LinearRegression().fit(X_train, y_train)\n",
     "    \n",
     "    #Evaluate Train and Test Errors\n",
+    "    predictions_train = reg.predict(X_train)\n",
+    "    residuals_train = predictions_train - y_train\n",
+    "    mse_train = (residuals_train**2).mean()\n",
+    "    \n",
+    "    predictions_test = reg.predict(X_test)\n",
+    "    residuals_test = predictions_test - y_test\n",
+    "    mse_test = (residuals_test**2).mean()\n",
+    "    \n",
+    "    train_errs.append(mse_train)\n",
+    "    test_errs.append(mse_test)\n",
     "\n",
-    "# print(train_errs)\n",
-    "# print(test_errs)"
+    "print(train_errs)\n",
+    "print(test_errs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6601058321281538"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(train_errs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7503867587865696"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(test_errs)"
    ]
   },
   {
@@ -236,10 +539,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "X = boston_features.loc[:,[\"B\", \"DIS\"]]\n",
+    "y = boston_features[\"LSTAT\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8383419755062808, 0.8333416856229062, 1.0211569761877635, 0.6474676378492472, 0.3428288514219758]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "scores = []\n",
+    "cv = KFold(n_splits=5, random_state=42, shuffle=False)\n",
+    "for train_index, test_index in cv.split(X):\n",
+    "#     print(\"Train Index: \", train_index, \"\\n\")\n",
+    "#     print(\"Test Index: \", test_index)\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = X.iloc[train_index,:], X.iloc[test_index,:], y[train_index], y[test_index];\n",
+    "    reg = LinearRegression().fit(X_train, y_train)\n",
+    "    #scores.append(reg.score(X_test, y_test))\n",
+    "    predictions_test = reg.predict(X_test)\n",
+    "    residuals_test = predictions_test - y_test\n",
+    "    mse_test = (residuals_test**2).mean()\n",
+    "    scores.append(mse_test)\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5701055350627794, 0.8006910816053368, 0.4822916782228979, 0.8648617726998964, 0.7989626093435642]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "scores = []\n",
+    "reg = LinearRegression().fit(X, y)\n",
+    "cv = KFold(n_splits=5, random_state=None, shuffle=True)\n",
+    "for train_index, test_index in cv.split(X):\n",
+    "#     print(\"Train Index: \", train_index, \"\\n\")\n",
+    "#     print(\"Test Index: \", test_index)\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = X.iloc[train_index,:], X.iloc[test_index,:], y[train_index], y[test_index];\n",
+    "    reg.fit(X_train, y_train)\n",
+    "    #scores.append(reg.score(X_test, y_test))\n",
+    "    predictions_test = reg.predict(X_test)\n",
+    "    residuals_test = predictions_test - y_test\n",
+    "    mse_test = (residuals_test**2).mean()\n",
+    "    scores.append(mse_test)\n",
+    "print(scores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,11 +620,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "mean of the 5-fold cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7033825353868949"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "original test-train-split case "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5226882874809512"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean of the 5-fold cross-validation MSEs is higher than the MSE from the single split."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
